# book-safety-scanner

./: .gitignore  README.md  pyproject.toml
book_safety_scanner/: cli.py  database.py  ingestion.py  output.py  pipeline.py  redactor.py  scoring.py  taxonomy.py
